--- a/CourseManager/CourseManager/Views/Account/Register.cshtml
+++ b/CourseManager/CourseManager/Views/Account/Register.cshtml
@@ -1,37 +1,65 @@
-﻿@model CourseManager.Models.RegisterModel
+﻿@model CourseManager.Models.Users
 @{
-    ViewBag.Title = "注册";
+    Layout = null;
 }
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8" />
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <title>注册</title>
+    <meta name="viewport" content="width=device-width" />
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    <style>
+        .login-container {
+            padding-top:200px;
+        }
+    </style>
+</head>
+    <body>
+        <div class="container body-content">
+            <div class="col-md-9 float-right login-container">
+                @using (Html.BeginForm()) {
+                @Html.ValidationSummary(true)
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>创建新帐户。</h2>
-</hgroup>
+                <fieldset>
+                    <legend>注册</legend>
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary()
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Account)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.Account)
+                        @Html.ValidationMessageFor(model => model.Account)
+                    </div>
 
-    <fieldset>
-        <legend>注册表单</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)
-            </li>
-        </ol>
-        <input type="submit" value="注册" />
-    </fieldset>
-}
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Name)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.Name)
+                        @Html.ValidationMessageFor(model => model.Name)
+                    </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Password)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.Password)
+                        @Html.ValidationMessageFor(model => model.Password)
+                    </div>
+
+                    <p>
+                        <input type="submit" value="注册" />
+                    </p>
+                </fieldset>
+                }
+            </div>
+
+        </div>
+        <br />
+        @Scripts.Render("~/bundles/jquery")
+    </body>
+</html>
