--- a/CourseManager/CourseManager/Views/Class/Create.cshtml
+++ b/CourseManager/CourseManager/Views/Class/Create.cshtml
@@ -1,9 +1,8 @@
-﻿                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     @model CourseManager.Models.Classes
-@using CourseManager.Models
+﻿@model CourseManager.Models.Classes
 
 @{
     ViewBag.Title = "Create";
-    var teachers = (List<Teacher>)ViewBag.Teacher;
+    var teachers = (List<CourseManager.Models.Teachers>)ViewBag.Teachers;
 }
 
 <h2>Create</h2>
@@ -15,28 +14,30 @@
         <legend>Classes</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Name)
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-lable col-md-2"})
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Name)
+        <div class="editor-field col-md-10">
+            @Html.TextBoxFor(model => model.Name, new {@class = "form-control"})
             @Html.ValidationMessageFor(model => model.Name)
         </div>
 
         <div class="editor-label">
-            <select name="TeacherId" class="form-control">
-                @foreach (var teacher in teachers) { 
-                <option value="@teacher.Id">@teacher.Name</option>
+            @Html.LabelFor(model => model.TeacherId, htmlAttributes: new { @class = "control-lable col-md-2"})
+        </div>
+        <div class="editor-field col-md-10">
+            <select name="TeacherId" class="editor-field form-control">
+                @foreach (var teacher in teachers)
+                { 
+                    <option value="@teacher.Id">@teacher.Name</option>
                 }
             </select>
-            @Html.LabelFor(model => model.TeacherId)
-        </div>
-        <div class="editor-field">
-           
         </div>
 
-        <p>
-            <input type="submit" value="Create" />
-        </p>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create"  class="btn btn-default"/>
+            </div>
+        </div>
     </fieldset>
 }
 
