--- a/CourseManager/CourseManager/Views/Class/Edit.cshtml
+++ b/CourseManager/CourseManager/Views/Class/Edit.cshtml
@@ -1,45 +1,45 @@
 ﻿@model CourseManager.Models.Classes
-@using CourseManager.Models
+
 @{
     ViewBag.Title = "Edit";
-     var teachers = (List<Teacher>)ViewBag.Teacher;
-}
-}
+    var teachers = (List<CourseManager.Models.Teachers>)ViewBag.Teachers;
 }
 
 <h2>Edit</h2>
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
-}
+
     <fieldset>
         <legend>Classes</legend>
 
         @Html.HiddenFor(model => model.Id)
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Name)
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-lable col-md-2"})
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Name)
+        <div class="editor-field col-md-10">
+            @Html.TextBoxFor(model => model.Name, new {@class = "form-control"})
             @Html.ValidationMessageFor(model => model.Name)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.TeacherId)
+            @Html.LabelFor(model => model.TeacherName, htmlAttributes: new { @class = "control-lable col-md-2"})
         </div>
-        <div class="editor-field">
-             <select name="TeacherId" class="form-control">
-                @foreach (var teacher in teachers) { 
-                <option value="@teacher.Id">@teacher.Name</option>
+        <div class="editor-field col-md-10">
+            <select name="TeacherId" class="editor-field form-control">
+                @foreach (var teacher in teachers)
+                { 
+                    <option value="@teacher.Id">@teacher.Name</option>
                 }
             </select>
-           
         </div>
 
-        <p>
-            <input type="submit" value="Save" />
-        </p>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save"  class="btn btn-default"/>
+            </div>
+        </div>
     </fieldset>
 }
 
