--- a/CourseManager/CourseManager/Views/Course/Details.cshtml
+++ b/CourseManager/CourseManager/Views/Course/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseManager.Models.Course
+﻿@model CourseManager.Models.Courses
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <fieldset>
-    <legend>Course</legend>
+    <legend>Courses</legend>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Name)
