--- a/CourseManager/CourseManager/Views/Course/Edit.cshtml
+++ b/CourseManager/CourseManager/Views/Course/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseManager.Models.Course
+﻿@model CourseManager.Models.Courses
 
 @{
     ViewBag.Title = "Edit";
@@ -10,15 +10,15 @@
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>Course</legend>
+        <legend>Courses</legend>
 
         @Html.HiddenFor(model => model.Id)
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Name)
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-lable col-md-2"})
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Name)
+        <div class="editor-field col-md-10">
+            @Html.TextBoxFor(model => model.Name, new {@class = "form-control"})
             @Html.ValidationMessageFor(model => model.Name)
         </div>
 
