--- a/CourseManager/CourseManager/Views/Course/Index.cshtml
+++ b/CourseManager/CourseManager/Views/Course/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CourseManager.Models.Course>
+﻿@model IEnumerable<CourseManager.Models.Courses>
 
 @{
     ViewBag.Title = "Index";
