--- a/CourseManager/CourseManager/Views/Home/Index.cshtml
+++ b/CourseManager/CourseManager/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "主页";
 }
-@section featured {
+@*@section featured {
     <section class="featured">
         <div class="content-wrapper">
             <hgroup class="title">
@@ -17,7 +17,7 @@
             </p>
         </div>
     </section>
-}
+}*@
 <h3>下面是我们的建议:</h3>
 <ol class="round">
     <li class="one">
