--- a/CourseManager/CourseManager/Views/Shared/_LoginPartial.cshtml
+++ b/CourseManager/CourseManager/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,16 @@
-﻿@if (Request.IsAuthenticated) {
+﻿@using CourseManager.Models.ValidatableObjects;
+@{
+    var cookie = HttpContext.Current.Request.Cookies["user"];
+    if (cookie == null)
+    {
+        cookie = new HttpCookie("user", " ");
+    }
+}
+
+@if (!string.IsNullOrWhiteSpace(cookie.Value))
+{
     <text>
-        你好，@Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "管理" })!
+        你好，@cookie.Value.DecryptQueryString();
         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
             @Html.AntiForgeryToken()
             <a href="javascript:document.getElementById('logoutForm').submit()">注销</a>
