--- a/CourseManager/CourseManager/Views/Teacher/Create.cshtml
+++ b/CourseManager/CourseManager/Views/Teacher/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseManager.Models.Teacher
+﻿@model CourseManager.Models.Teachers
 
 @{
     ViewBag.Title = "Create";
@@ -10,13 +10,13 @@
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>Teacher</legend>
+        <legend>Teachers</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Name)
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-lable col-md-2"})
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Name)
+            @Html.TextBoxFor(model => model.Name, new {@class = "form-control"})
             @Html.ValidationMessageFor(model => model.Name)
         </div>
 
