--- a/CourseManager/CourseManager/Views/Teacher/Delete.cshtml
+++ b/CourseManager/CourseManager/Views/Teacher/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseManager.Models.Teacher
+﻿@model CourseManager.Models.Teachers
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <fieldset>
-    <legend>Teacher</legend>
+    <legend>Teachers</legend>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Name)
