--- a/CourseManager/CourseManager/Views/Teacher/Details.cshtml
+++ b/CourseManager/CourseManager/Views/Teacher/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseManager.Models.Teacher
+﻿@model CourseManager.Models.Teachers
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <fieldset>
-    <legend>Teacher</legend>
+    <legend>Teachers</legend>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Name)
